# big-particle

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  gunicorn.service  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
backend/: .gitignore  docker-compose.yaml  gunicorn.conf.py  gunicorn.service  pyproject.toml
backend/core/: admin.py  serializers.py  views.py
backend/core/migrations/: 0004_ossobject_bucket_ossobject_storage_type_and_more.py  0005_algobigparticledetail_and_more.py  0006_algorecord_delete_min_max_size.py  0009_algobigparticledetail_long_size_and_more.py
backend/core/stream/: count_down_latch.py  delayed_queue.py  frame.py  video_processor.py
backend/core/stream/algorithm/: big_particle_algo.py  status.py
backend/core/stream/algorithm/model/: model_manager.py
backend/core/stream/decoder/: base.py  factory.py  rtsp_decoder.py  video_file_decoder.py
backend/mvs_samples/: ImageSave.py
backend/netdata/: netdata.conf
backend/paddle_samples/: README.md  keypoint_preprocess.py
backend/pgadmin4/: servers.json
backend/proj/: urls.py
backend/prometheus/: docker-compose.yaml
backend/prometheus/grafana/provisioning/dashboards/: Spring Boot Statistics & Endpoint Metrics-1751037302619.json
backend/tools/: back_imgs_by_filter.py  calu_iou.py  delete_records.py  delete_records_by_ids.py  light_control.py  ocv_decode_test.py  onvif_collect_imgs.py  onvif_speed_test.py  onvif_test.py  sample_imgs.py  utils.py
core/: admin.py  apps.py  models.py  runtime.py  serializers.py  signals.py  views.py
proj/: urls.py  (+1 more)
(+81 files in other folders)
