[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.pyright]
extraPaths = ["/opt/MVS/Samples/64/Python/MvImport"]
ignore = [
    "mvs_samples"
]

[project]
name = "big-particle-backend"
version = "0.1.0"
description = "大颗粒项目后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework>=3.16.0",
    "psycopg[binary]>=3.2.9",
]
