[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.pyright]
extraPaths = ["/opt/MVS/Samples/64/Python/MvImport"]
typeCheckingMode = "off"
ignore = [
    "mvs_samples"
]

[project]
name = "big-particle-backend"
version = "0.1.0"
description = "大颗粒项目后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    # paddle preprocess 中使用 imgaug，但 imgaug 不支持 numpy 2.0，因此降低 numpy、opencv 版本
    "gunicorn>=23.0.0",
    "imgaug>=0.4.0",
    "numpy<2",
    "onvif-zeep>=0.2.12",
    "opencv-python<=4.6",
    "psycopg[binary]>=3.2.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",   # paddle 需要
]
